--- a/hadoop_spark/spark/google-colab-setup-PySpark.ipynb
+++ b/hadoop_spark/spark/google-colab-setup-PySpark.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "#instalar java y spark\n",
-    "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
+    "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
     "!wget -q https://downloads.apache.org/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3.tgz\n",
     "!tar xf spark-3.3.0-bin-hadoop3.tgz\n",
     "!pip install -q findspark"
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
+    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
     "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.3.0-bin-hadoop3\""
    ]
   },
@@ -287,7 +287,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +301,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
