update spark to aws s3

--- a/hadoop_spark/spark/Data_processing_using_PySpark.ipynb
+++ b/hadoop_spark/spark/Data_processing_using_PySpark.ipynb
@@ -72,14 +72,15 @@
     "    .config(\"spark.driver.memory\",\"16G\")\\\n",
     "    .config(\"spark.driver.maxResultSize\", \"0\") \\\n",
     "    .config(\"spark.kryoserializer.buffer.max\", \"2000M\")\\\n",
-    "    .config(\"spark.jars.packages\", \"com.amazonaws:aws-java-sdk:1.11.1034, org.apache.hadoop:hadoop-aws:3.3.1\")\\\n",
-    "    .config('fs.s3a.access.key', 'AWS_ACCESS_KEY') \\\n",
-    "    .config('fs.s3a.secret.key', 'AWS_SECRET_KEY') \\\n",
-    "    .config('fs.s3a.session.token', 'AWS_SESSION_TOKEN') \\\n",
+    "    .config(\"spark.jars.packages\", \"com.amazonaws:aws-java-sdk:1.11.1034,org.apache.hadoop:hadoop-aws:3.3.4\")\\\n",
+    "    .config('fs.s3a.access.key', \"AWS_ACCESS_KEY\" \\\n",
+    "    .config('fs.s3a.secret.key', \"AWS_SECRET_KEY\") \\\n",
+    "    .config('fs.s3a.session.token',\"AWS_SESSION_TOKEN\") \\\n",
     "    .config('fs.s3a.path.style.access', 'true') \\\n",
     "    .config('fs.s3a.impl', 'org.apache.hadoop.fs.s3a.S3AFileSystem') \\\n",
     "    .config('fs.s3a.endpoint', 's3.amazonaws.com') \\\n",
     "    .getOrCreate()\n",
+    "\n",
     "#create spark session object\n",
     "#spark=SparkSession.builder.appName('data_processing').getOrCreate()\n",
     "# en el cluster EMR no hay necesidad de hacer esto, ya viene con AWS EMR / Notebooks\n",
@@ -99,7 +100,7 @@
     "# desde local\n",
     "#df=spark.read.csv('../datasets/sample_data.csv',inferSchema=True,header=True)\n",
     "# desde S3\n",
-    "#df=spark.read.csv('s3n://emontoyadatalake/datasets/sample_data.csv',inferSchema=True,header=True)\n"
+    "#df=spark.read.csv('s3a://emontoyadatalake/datasets/sample_data.csv',inferSchema=True,header=True)\n"
    ]
   },
   {
