labs of text mining

--- a/text-mining/lda-ejemplo1/lda-gensim-example.ipynb
+++ b/text-mining/lda-ejemplo1/lda-gensim-example.ipynb
@@ -13,23 +13,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "UP6ahqcYljRZ"
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install smart-open\n",
-    "#ref: https://radimrehurek.com/gensim/\n",
-    "!pip install gensim\n",
-    "!pip install nltk\n",
-    "!pip install pyLDAvis\n",
-    "# descargar datos 'metadata.csv' de: https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge\n",
-    "# https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge?select=metadata.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -52,6 +35,23 @@
     "#configuración en google colab de spark y pyspark\n",
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "UP6ahqcYljRZ"
+   },
+   "outputs": [],
+   "source": [
+    "#!pip install smart-open\n",
+    "#ref: https://radimrehurek.com/gensim/\n",
+    "!pip install gensim\n",
+    "!pip install nltk\n",
+    "!pip install pyLDAvis\n",
+    "# descargar datos 'metadata.csv' de: https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge\n",
+    "# https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge?select=metadata.csv"
    ]
   },
   {
@@ -107,7 +107,8 @@
    "outputs": [],
    "source": [
     "# cargar datos en pandas\n",
-    "df = pd.read_csv('metadata.csv')"
+    "df = pd.read_csv('metadata.csv')\n",
+    "#df = pd.read_csv('gdrive/MyDrive/datasets/metadata.csv')"
    ]
   },
   {
@@ -315,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(corpus)"
+    "print(corpus[:5])"
    ]
   },
   {
