--- a/text-mining/classifier-nb/Consumer_complaints.ipynb
+++ b/text-mining/classifier-nb/Consumer_complaints.ipynb
@@ -299,6 +299,8 @@
     "\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
+    "import pickle\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(df['Consumer_complaint_narrative'], df['Product'], random_state = 0)\n",
     "\n",
     "count_vect = CountVectorizer()\n",
@@ -311,7 +313,10 @@
     "\n",
     "clf = MultinomialNB().fit(X_train_tfidf, y_train)\n",
     "\n",
-    "clf.save(\"file.model\")\n"
+    "pickle.dump(clf,open(\"file.model\",\"wb\"))\n",
+    "\n",
+    "#clf = pickle.load(open(\"file.model\", 'rb'))\n",
+    "#result = clf.score(X_test, Y_test)\n"
    ]
   },
   {
@@ -367,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +386,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
