--- a/text-mining/lda-pyspark/tp_airlines.ipynb
+++ b/text-mining/lda-pyspark/tp_airlines.ipynb
@@ -39,37 +39,15 @@
       "source": [
         "#configuración en google colab\n",
         "#instalar java y spark\n",
-        "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
-        "!wget -q https://downloads.apache.org/spark/spark-3.2.1/spark-3.2.1-bin-hadoop3.2.tgz\n",
-        "!tar xf spark-3.2.1-bin-hadoop3.2.tgz\n",
-        "!pip install findspark\n",
+        "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
+        "!wget -q https://downloads.apache.org/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3.tgz\n",
+        "!tar xf spark-3.3.0-bin-hadoop3.tgz\n",
+        "!pip install -q findspark\n",
         "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
-        "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.2.1-bin-hadoop3.2\"\n",
+        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
+        "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.3.0-bin-hadoop3\"\n",
         "import findspark\n",
         "findspark.init()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fjwlzuuI7F7M",
-        "outputId": "111ff598-e648-46ee-c0e2-22e1debbf4b9"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install pyspark"
       ]
     },
     {
@@ -180,7 +158,7 @@
       },
       "outputs": [],
       "source": [
-        "df=spark.read.csv(\"gdrive/MyDrive/st1800github/datasets/airlines.csv\", inferSchema=True, header=True)\n",
+        "df=spark.read.csv(\"gdrive/MyDrive/st1800-2266/datasets/airlines.csv\", inferSchema=True, header=True)\n",
         "df = df.fillna({'review': ''})                               # Replace nulls with blank string\n",
         "\n",
         "# Add Unique ID\n",
@@ -461,7 +439,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.6 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -475,7 +453,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.10.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
     }
   },
   "nbformat": 4,
