--- a/text-mining/lda-pyspark/tp_airlines_local.ipynb
+++ b/text-mining/lda-pyspark/tp_airlines_local.ipynb
@@ -18,6 +18,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "#forma 1 de crear la sesión y el contexto Spark:\n",
+    "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
+    "sc = spark.sparkContext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import monotonically_increasing_id, col, expr, when, concat, lit, isnan\n",
     "from pyspark.ml.linalg import Vectors\n",
@@ -35,18 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.context import SparkContext\n",
-    "from pyspark.sql.session import SparkSession\n",
-    "sc = SparkContext('local', \"app-topic-detection\") \n",
-    "spark = SparkSession(sc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#actualice el path de airlines.csv a su propio directorio\n",
     "df=spark.read.csv(\"airlines.csv\", inferSchema=True, header=True)\n",
     "df.show(10)"
    ]
@@ -297,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +322,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
